tests/errors/import_location.vrv
fn foo() -> void {}

import * from "../import_helper_1"

fn bar() -> void {}
